# SmartFood

./: Dockerfile  README.md  README.rst  foodseg103.yaml  nutri_bot.py  preprocess_data.py  preprocessed_reccomend.py  requirements.txt  train.py
SmartFood-pubsub/: deploy.sh
SmartFood-pubsub/detector/: main.py  requirements.txt
SmartFood-pubsub/mensajero/: main.py  requirements.txt
SmartFood-pubsub/recomendador/: main.py  requirements.txt
SmartFood-pubsub/webhook/: main.py
notebooks/: distribución_recetas.ipynb  experimentos.ipynb  ingredientes.ipynb  notebook_triplets.ipynb  nuevas_tripletas.ipynb  nuevas_tripletas20k.ipynb  pykeen.ipynb
planificacion TFG/: diagrama_gantt_inicial_gke.html  diagrama_gantt_real.html
smartfood/: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
smartfood/.github/: ISSUE_TEMPLATE.md
smartfood/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
smartfood/src/smartfood/: __init__.py  clases.py  data_processing.py  nutri_bot.py  recommender_service.py  requirements2.txt  yolo_service.py
smartfood/src/smartfood/models/: recommend_model.py  train_recommend.py  yolo_inference.py
smartfood/tests/: __init__.py  test_smartfood.py
