[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartfood"
version = "0.1.0"
description = "Nutritional Recommendation from Images"
readme = "README.rst"
authors = [
  {name = "Javier Martinez Cristobal", email = "javimartinezcristobal@gmail.com"}
]
maintainers = [
  {name = "Javier Martinez Cristobal", email = "javimartinezcristobal@gmail.com"}
]
classifiers = [

]
license = {text = "Apache Software License 2.0"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Jmartinezc-rgb/smartfood/issues"
changelog = "https://github.com/Jmartinezc-rgb/smartfood/blob/master/changelog.md"
homepage = "https://github.com/Jmartinezc-rgb/smartfood"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

